apps/excalidraw/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /excalidraw
