apps/excalidraw/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-service
spec:
  selector:
    app: excalidraw
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
