apps/excalidraw/base/ingress-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-ingress-http
  namespace: apps
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`excalidraw.rthadani.xyz`) || Host(`excalidraw.io.local`) 
    services:
    - name: excalidraw-service
      passHostHeader: false
      port: 80
      kind: Service
    middlewares:
    - name: strip-prefix
      namespace: apps
