apps/excalidraw/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-ingress
  namespace: apps
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/excalidraw`) ||  PathPrefix(`/Virgil.woff2`) ||  PathPrefix(`/fonts.css`) || PathPrefix(`/static/css`) || PathPrefix(`/static/js`)
    services:
    - name: excalidraw-service
      passHostHeader: false
      port: 80
      kind: Service
    middlewares:
    - name: strip-prefix
      namespace: apps 
  tls:
    certResolver: default
